# cpp_project

./: Makefile  README.md
caching_proxy/: BUILD  MODULE.bazel  README.md  main.cpp
expense_tracker/: BUILD  MODULE.bazel  README.md  expense.cpp  expense.h  expense_manager.cpp  expense_manager.h  main.cpp
gitHub_user_activity/: .bazelrc  .clang-format  BUILD  MODULE.bazel  README.md  main.cpp  utils.cpp  utils.h
gitHub_user_activity/tests/: BUILD  utils_tests.cpp
number_guessing_game/: .gitignore  BUILD  main.cpp
task_tracker/: .clang-format  .gitignore  BUILD  MODULE.bazel  Makefile  README.md  main.cpp  task.cpp  task.h  task_manager.cpp  task_manager.h
task_tracker/tests/: BUILD  task.test.cpp  task_manager.test.cpp
tmdb_cli_tool/: BUILD  MODULE.bazel  main.cpp
